# python-todomvc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
python_todomvc/: main.py
tests/: app_test.py
