[tool.poetry]
name = "python-todomvc"
version = "0.1.0"
description = ""
authors = ["Jaime Leonardo Suncin Cruz <leosuncin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
bandit = "^1.7.6"
safety = "^2.3.5"
pre-commit = "^3.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
